--- a/capitulo-4/index.html
+++ b/capitulo-4/index.html
@@ -52,16 +52,13 @@
         <div class="box-personaje" id="personaje-1">
             <img src="../img/bg-personaje-1.jpg" alt="" width="100%">
             <div class="box-texto-personaje">
-                <h6>“¡Qué me mira. cadete! ¿quiere que le regale una fotografía mía calato?”</h6>
+                <h6>“Creen que soy un soplón ―dijo el Jaguar ―. ¿Ve usted lo que le digo? Ni siquiera trataron de averiguar la verdad, nada, apenas les abrieron los roperos, los malagradecidos me dieron la espalda”.</h6>
                 <h5>
-                    Teniente Gamboa
-                    <span>La ciudad y los perros - 1962</span>
+                    El Jaguar
+                    <span>(“La ciudad y los perros”, 1963)</span>
                 </h5>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                </p>
-                <p>
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ya avanzada la novela es cuando se descubre que uno de los personajes principales, quien hasta ese momento no había sido identificado, era el Jaguar. El más bravo de los bravos del Colegio Militar Leoncio Prado había sido sistemáticamente humanizado, pero recién después el lector hace la conexión entre el ladronzuelo y el simulacro de justiciero, que es al mismo tiempo un bully. Protagonista del diálogo más complejo de la novela, un duelo verbal con el teniente Gamboa que pasará a la historia de las letras en español.
                 </p>
             </div>
         </div>
@@ -71,19 +68,16 @@
         <div class="box-personaje" id="personaje-2">            
             <div class="box-texto-personaje">                
                 <h5>
-                    Coronel Abbes
-                    <span>La fiesta del chivo - 2000</span>
+                    Zavalita
+                    <span>(“Conversación en La Catedral”, 1969)</span>
                 </h5>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                </p>
-                <p>
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Con esa frase arranca la tercera novela de Mario Vargas Llosa. Santiago Zavala ‘Zavalita’, es un periodista como tantos en una ciudad hostil en un país de marras, donde él mismo se pregunta en qué momento se jodió su vida. El autor responde por medio de una travesía de altibajos donde el personaje, teniendo oportunidades para ser un “ganador”, vive lejos de cualquier logro, en la intrascendencia. La explicación está en una novela de 700 páginas, triste tesis sobre cómo un hombre se hunde por su propia mano.
                 </p>
             </div>
             <div class="box-ilustracion-personaje">
                 <img src="../img/bg-personaje-2.jpg" alt="" width="100%">
-                <h6>“A usted no lo admiro, excelencia. Yo vivo por usted. para usted. Si me permite. Soy el perro guardián de usted.”</h6>
+                <h6>“Desde la puerta de La Crónica Santiago mira la avenida Tacna, sin amor: automóviles, edificios desiguales y descoloridos, esqueletos de avisos luminosos flotando en la neblina, el mediodía gris. ¿En qué momento se había jodido el Perú?”.</h6>
             </div>           
         </div>
 
@@ -93,16 +87,15 @@
             <img src="../img/bg-personaje-3.jpg" alt="" width="100%">         
             <div class="box-texto-personaje">                
                 <h5>
-                    Coronel Abbes
-                    <span>La fiesta del chivo - 2000</span>
+                    Antonio Conselheiro
+                    <span>(“La guerra del fin del mundo”, 1981)</span>
                 </h5>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    De todos los personajes memorables que aparecen en “La guerra del fin del mundo”, el santo de los sertones es uno de los que más honda caracterización recibió por el escritor. Con la mente enfocada en una sola cosa, dirigió a una cantidad inmensa de desposeídos que, olvidados por el incipiente estado brasileño en el siglo XIX, se dejan arrastrar a lo que creen que será su tierra prometida. Conselheiro marca también el inicio de Vargas Llosa en la novela histórica, donde toma gente que existió y las inmortaliza con la ficción.
                 </p>
-                <p>
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
-                <h6>“Mira, marito. He hecho todas las locuras del mundo en mi vida, pero ésta no la voy a hacer.”</h6>
+                <h6>
+                    “El Hombre era alto y tan flaco que parecía siempre de perfil. Su piel era oscura, sus huesos prominentes y sus ojos ardían con fuego perpetuo.”
+                </h6>
             </div>         
         </div>
 
@@ -112,16 +105,13 @@
             <img src="../img/bg-personaje-4.jpg" alt="" width="100%">         
             <div class="box-texto-personaje">                
                 <h5>
-                    Pantaleón
-                    <span>Pantalón y las visitadoras - 1973</span>
+                    Elvira
+                    <span>(“La Señorita de Tacna”, 1981)</span>
                 </h5>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Para unos pocos es Elvira; para la mayoría, Mamaé, una mujer a la que la vejez ha convertido en una sombra plagada de todos los males imaginables, pero que en su juventud fue dueña de una fuerza de temer, decidida a no casarse en una sociedad donde la mujer solo era valiosa para parir y mantener una casa. Protagonista de una obra de teatro que es en parte un ejercicio sobre cómo se crean las ficciones, en parte un retrato de la época, es también el rostro de las personas que hacen trabajo impago para criar hijos ajenos y que, aún al día de hoy, no son lo suficientemente reconocidas.
                 </p>
-                <p>
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </p>
-                <h6>“Yo necesito tener jefes, si no tuviera, no sabría que hacer, el mundo se me vendria abajo.”</h6>
+                <h6>“¡Caramba, Mamaé, ya te hiciste pipí otra vez en la sala! ¿Por qué no pides, para llevarte al baño? Cuántas veces se te ha dicho. ¿Crees que no me da asco?”</h6>
             </div>         
         </div>
 
@@ -131,16 +121,99 @@
             <img src="../img/bg-personaje-4.jpg" alt="" width="100%">         
             <div class="box-texto-personaje">                
                 <h5>
-                    Pantaleón
-                    <span>Pantalón y las visitadoras - 1973</span>
+                    Pantaleón Pantoja 
+                    <span>(“Pantaleón y las visitadoras”, 1973)</span>
                 </h5>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Y esas tres últimas palabras son las que caracterizan a Pantaleón Pantoja, obediente milico comisionado a un trabajo imposible: establecer un servicio de prostitución para beneficio de la soldadesca en la selva que ha demostrado, en repetidas ocasiones, conductas violadoras. Por medio de diálogos e informes militares, Vargas Llosa crea a un Pantoja que se toma en serio su trabajo hasta el mínimo detalle, en páginas cargadas de un humor inusual para su obra hasta ese momento. Un personaje recto que, progresivamente, se rinde a la dictadura de su entrepierna.
                 </p>
+                <h6>“El suscrito sabe bien, desde sus inolvidables tiempos de cadete, que no hay misión que no ofrezca dificultades y que no hay dificultad que no pueda ser vencida con energía, voluntad y trabajo”.</h6>
+            </div>         
+        </div>
+
+        <div class="separador-personaje"></div>
+
+        <div class="box-personaje" id="personaje-6">
+            <img src="../img/bg-personaje-1.jpg" alt="" width="100%">
+            <div class="box-texto-personaje">
+                <h6>“Allá en el norte, en Piura y Talara, Lituma nunca creyó en brujas ni brujerías, pero aquí, en la sierra, ya no estaba tan seguro”.</h6>
+                <h5>
+                    Lituma
+                    <span>(“¿Quién mató a Palomino Molero?”, 1986; “Lituma en los andes”, 1993; y más)</span>
+                </h5>
                 <p>
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Presente en múltiples obras del Nobel, el sargento de la Guardia Civil Lituma es un criollo de aquellos al que, como buen protagonista, siempre le pasan cosas. O al menos conoce a gente a la que le pasan cosas. Es por medio de su mirada (es muy buen observador) que el espectador conoce detalles clave de las novelas. Siempre con un comentario gracioso en la punta de la lengua, Lituma vive al borde del abismo. Si no se cae, es por terco; y si cae, ya se levantará solo. Y el círculo así continúa.
                 </p>
-                <h6>“Yo necesito tener jefes, si no tuviera, no sabría que hacer, el mundo se me vendria abajo.”</h6>
+            </div>
+        </div>
+        
+        <div class="separador-personaje"></div>
+
+        <div class="box-personaje" id="personaje-7">            
+            <div class="box-texto-personaje">                
+                <h5>
+                    Flora Tristán
+                    <span>(“El paraíso en la otra esquina”, 2003)</span>
+                </h5>
+                <p>
+                    Una mujer comprometida con los oprimidos de la sociedad es lo que presenta Vargas Llosa con su versión de Flora Tristán, nacida de una profunda investigación (algo que sería una constante en su producción tardía) sobre la luchadora social, así como la vida en Francia en el siglo XIX. La narración del libro actúa como una especie de conciencia del personaje, quien reflexiona sobre aspectos clave de la experiencia femenina (la maternidad, el trabajo no remunerado, el abuso por parte del hombre) en un mundo que no tiene intenciones de escucharla.
+                </p>
+            </div>
+            <div class="box-ilustracion-personaje">
+                <img src="../img/bg-personaje-2.jpg" alt="" width="100%">
+                <h6>
+                    “[Flora], tenías una noción muy clara de lo bueno y lo malo, sobre victimarios y víctimas, y sabías la receta para curar los vicios de la sociedad”.
+                </h6>
+            </div>           
+        </div>
+
+        <div class="separador-personaje"></div>
+
+        <div class="box-personaje" id="personaje-8">   
+            <img src="../img/bg-personaje-3.jpg" alt="" width="100%">         
+            <div class="box-texto-personaje">                
+                <h5>
+                    La Tía Julia
+                    <span>(“La tía julia y el escribidor”, 1977)</span>
+                </h5>
+                <p>
+                    Dicen que en las historias de amor, el protagonismo y antagonismo son características de la pareja central; ambos se turnan los roles. Y al menos en esta novela, la Tía Julia arranca como un ser antagónico, ganándose la antipatía de Mario, ya después ambos sucumben al placer. Que protagonista y escritor compartan nombre no es casual, al igual que tía, basada en la primera esposa del novelista, Julia Urquidi (su tía real). En una sociedad donde se confunde el silencio femenino con la buena educación, ella dice lo que piensa, con humor y desparpajo.
+                </p>
+                <h6>
+                    “[Ella] me aconsejó, con una perversidad que no descubría si era deliberada o inocente pero que igual me llegó al alma, que apenas pudiera me dejara crecer el bigote. A los morenos les sentaba y eso me facilitaría las cosas con las chicas”.
+                </h6>
+            </div>         
+        </div>
+
+        <div class="separador-personaje"></div>
+
+        <div class="box-personaje" id="personaje-9">   
+            <img src="../img/bg-personaje-4.jpg" alt="" width="100%">         
+            <div class="box-texto-personaje">                
+                <h5>
+                    Elvira
+                    <span>(“La Señorita de Tacna”, 1981)</span>
+                </h5>
+                <p>
+                    Para unos pocos es Elvira; para la mayoría, Mamaé, una mujer a la que la vejez ha convertido en una sombra plagada de todos los males imaginables, pero que en su juventud fue dueña de una fuerza de temer, decidida a no casarse en una sociedad donde la mujer solo era valiosa para parir y mantener una casa. Protagonista de una obra de teatro que es en parte un ejercicio sobre cómo se crean las ficciones, en parte un retrato de la época, es también el rostro de las personas que hacen trabajo impago para criar hijos ajenos y que, aún al día de hoy, no son lo suficientemente reconocidas.
+                </p>
+                <h6>“¡Caramba, Mamaé, ya te hiciste pipí otra vez en la sala! ¿Por qué no pides, para llevarte al baño? Cuántas veces se te ha dicho. ¿Crees que no me da asco?”</h6>
+            </div>         
+        </div>
+
+        <div class="separador-personaje separador-vertical"></div>
+
+        <div class="box-personaje" id="personaje-10">   
+            <img src="../img/bg-personaje-4.jpg" alt="" width="100%">         
+            <div class="box-texto-personaje">                
+                <h5>
+                    Pantaleón Pantoja 
+                    <span>(“Pantaleón y las visitadoras”, 1973)</span>
+                </h5>
+                <p>
+                    Y esas tres últimas palabras son las que caracterizan a Pantaleón Pantoja, obediente milico comisionado a un trabajo imposible: establecer un servicio de prostitución para beneficio de la soldadesca en la selva que ha demostrado, en repetidas ocasiones, conductas violadoras. Por medio de diálogos e informes militares, Vargas Llosa crea a un Pantoja que se toma en serio su trabajo hasta el mínimo detalle, en páginas cargadas de un humor inusual para su obra hasta ese momento. Un personaje recto que, progresivamente, se rinde a la dictadura de su entrepierna.
+                </p>
+                <h6>“El suscrito sabe bien, desde sus inolvidables tiempos de cadete, que no hay misión que no ofrezca dificultades y que no hay dificultad que no pueda ser vencida con energía, voluntad y trabajo”.</h6>
             </div>         
         </div>
 
