--- a/capitulo-4/index.html
+++ b/capitulo-4/index.html
@@ -50,7 +50,7 @@
    <div class="box-main-personajes">
 
         <div class="box-personaje" id="personaje-1">
-            <img src="../img/bg-personaje-1.jpg" alt="" width="100%">
+            <img src="../img/bg-personaje-1-1.jpg" alt="" width="100%">
             <div class="box-texto-personaje">
                 <h6>“Creen que soy un soplón ―dijo el Jaguar ―. ¿Ve usted lo que le digo? Ni siquiera trataron de averiguar la verdad, nada, apenas les abrieron los roperos, los malagradecidos me dieron la espalda”.</h6>
                 <h5>
@@ -76,7 +76,7 @@
                 </p>
             </div>
             <div class="box-ilustracion-personaje">
-                <img src="../img/bg-personaje-2.jpg" alt="" width="100%">
+                <img src="../img/bg-personaje-2-1.jpg" alt="" width="100%">
                 <h6>“Desde la puerta de La Crónica Santiago mira la avenida Tacna, sin amor: automóviles, edificios desiguales y descoloridos, esqueletos de avisos luminosos flotando en la neblina, el mediodía gris. ¿En qué momento se había jodido el Perú?”.</h6>
             </div>           
         </div>
@@ -84,7 +84,7 @@
         <div class="separador-personaje"></div>
 
         <div class="box-personaje" id="personaje-3">   
-            <img src="../img/bg-personaje-3.jpg" alt="" width="100%">         
+            <img src="../img/bg-personaje-3-1.jpg" alt="" width="100%">         
             <div class="box-texto-personaje">                
                 <h5>
                     Antonio Conselheiro
@@ -102,7 +102,7 @@
         <div class="separador-personaje"></div>
 
         <div class="box-personaje" id="personaje-4">   
-            <img src="../img/bg-personaje-4.jpg" alt="" width="100%">         
+            <img src="../img/bg-personaje-4-1.jpg" alt="" width="100%">         
             <div class="box-texto-personaje">                
                 <h5>
                     Elvira
@@ -118,7 +118,7 @@
         <div class="separador-personaje separador-vertical"></div>
 
         <div class="box-personaje" id="personaje-5">   
-            <img src="../img/bg-personaje-4.jpg" alt="" width="100%">         
+            <img src="../img/bg-personaje-5.jpg" alt="" width="100%">         
             <div class="box-texto-personaje">                
                 <h5>
                     Pantaleón Pantoja 
@@ -134,7 +134,7 @@
         <div class="separador-personaje"></div>
 
         <div class="box-personaje" id="personaje-6">
-            <img src="../img/bg-personaje-1.jpg" alt="" width="100%">
+            <img src="../img/bg-personaje-6.jpg" alt="" width="100%">
             <div class="box-texto-personaje">
                 <h6>“Allá en el norte, en Piura y Talara, Lituma nunca creyó en brujas ni brujerías, pero aquí, en la sierra, ya no estaba tan seguro”.</h6>
                 <h5>
@@ -160,7 +160,7 @@
                 </p>
             </div>
             <div class="box-ilustracion-personaje">
-                <img src="../img/bg-personaje-2.jpg" alt="" width="100%">
+                <img src="../img/bg-personaje-7.jpg" alt="" width="100%">
                 <h6>
                     “[Flora], tenías una noción muy clara de lo bueno y lo malo, sobre victimarios y víctimas, y sabías la receta para curar los vicios de la sociedad”.
                 </h6>
@@ -170,7 +170,7 @@
         <div class="separador-personaje"></div>
 
         <div class="box-personaje" id="personaje-8">   
-            <img src="../img/bg-personaje-3.jpg" alt="" width="100%">         
+            <img src="../img/bg-personaje-8.jpg" alt="" width="100%">         
             <div class="box-texto-personaje">                
                 <h5>
                     La Tía Julia
@@ -188,32 +188,38 @@
         <div class="separador-personaje"></div>
 
         <div class="box-personaje" id="personaje-9">   
-            <img src="../img/bg-personaje-4.jpg" alt="" width="100%">         
+            <img src="../img/bg-personaje-9.jpg" alt="" width="100%">         
             <div class="box-texto-personaje">                
                 <h5>
-                    Elvira
-                    <span>(“La Señorita de Tacna”, 1981)</span>
+                    El Chivo
+                    <span>
+                        (“La fiesta del Chivo”, 2000)
+                    </span>
                 </h5>
                 <p>
-                    Para unos pocos es Elvira; para la mayoría, Mamaé, una mujer a la que la vejez ha convertido en una sombra plagada de todos los males imaginables, pero que en su juventud fue dueña de una fuerza de temer, decidida a no casarse en una sociedad donde la mujer solo era valiosa para parir y mantener una casa. Protagonista de una obra de teatro que es en parte un ejercicio sobre cómo se crean las ficciones, en parte un retrato de la época, es también el rostro de las personas que hacen trabajo impago para criar hijos ajenos y que, aún al día de hoy, no son lo suficientemente reconocidas.
+                    ¿Cómo escribir sobre un sátrapa, una persona con el poder y la voluntad de poner a un país de rodillas? La respuesta está en Rafael Leónidas Trujillo, alias ‘El Chivo’, dictador de República Dominicana que el Nobel convirtió en un personaje literario de escasa paciencia y mucho menor autocontrol, que mataba por puro capricho a opositores políticos o a gente común que, simplemente, le causaba antipatía. Un tipo con campo gravitatorio propio, que medía su valor como hombre por el kilometraje sexual, a cuyo alrededor prosperaron otros granujas. Un retrato del poder al desnudo.
                 </p>
-                <h6>“¡Caramba, Mamaé, ya te hiciste pipí otra vez en la sala! ¿Por qué no pides, para llevarte al baño? Cuántas veces se te ha dicho. ¿Crees que no me da asco?”</h6>
+                <h6>“Trujillo podía hacer que el agua se volviera vino y los panes se multiplicaran, si le daba en los cojones”.</h6>
             </div>         
         </div>
 
         <div class="separador-personaje separador-vertical"></div>
 
         <div class="box-personaje" id="personaje-10">   
-            <img src="../img/bg-personaje-4.jpg" alt="" width="100%">         
+            <img src="../img/bg-personaje-10.jpg" alt="" width="100%">         
             <div class="box-texto-personaje">                
                 <h5>
-                    Pantaleón Pantoja 
-                    <span>(“Pantaleón y las visitadoras”, 1973)</span>
+                    Mario Vargas Llosa
+                    <span>
+                        (“El pez en el agua”, 1993)
+                    </span>
                 </h5>
                 <p>
-                    Y esas tres últimas palabras son las que caracterizan a Pantaleón Pantoja, obediente milico comisionado a un trabajo imposible: establecer un servicio de prostitución para beneficio de la soldadesca en la selva que ha demostrado, en repetidas ocasiones, conductas violadoras. Por medio de diálogos e informes militares, Vargas Llosa crea a un Pantoja que se toma en serio su trabajo hasta el mínimo detalle, en páginas cargadas de un humor inusual para su obra hasta ese momento. Un personaje recto que, progresivamente, se rinde a la dictadura de su entrepierna.
+                    ¿Dónde acaba el personaje y dónde empieza la persona? Esa es una pregunta que los biógrafos de Mario Vargas Llosa se harán en los próximos años. Lo que es indiscutible es que para formularla tendrán que considerar lo dicho por el autor en “El pez en el agua”, autobiografía que muestra un vistazo íntimo al escritor, desde su infancia hasta su candidatura a la Presidencia de la República. Todo escritor elige lo que quiere contar para crear un personaje, y cuando habla de sí mismo en primera persona la situación no es distinta. El Vargas Llosa del libro tiene mucho en común con la persona real, pero solo hasta donde él mismo lo permite. Un reflejo borroso, pero no por ello menos vívido.
                 </p>
-                <h6>“El suscrito sabe bien, desde sus inolvidables tiempos de cadete, que no hay misión que no ofrezca dificultades y que no hay dificultad que no pueda ser vencida con energía, voluntad y trabajo”.</h6>
+                <h6>
+                    “Y, cuando, sobreexcitado con su propia rabia, se lanzaba a veces contra mi madre, a golpearla, yo quería morirme de verdad, porque incluso la muerte me parecía preferible al miedo que sentía.”
+                </h6>
             </div>         
         </div>
 
