--- a/menu/index.html
+++ b/menu/index.html
@@ -96,16 +96,16 @@
         // Cargar imágenes en espiral con enlaces correspondientes y títulos
         const mediaItems = [
             { url: '../img/bg-centro-2.png', link: '', title: '', type: 'image' },
-            { url: '../videos/video-vargas-1-2.mp4', link: '../capitulo-1/index.html', title: '', type: 'video' },
-            { url: '../videos/video-vargas-1-2.mp4', link: '../capitulo-2/index.html', title: '', type: 'video' },
-            { url: '../videos/video-vargas-1-2.mp4', link: '../capitulo-3/index.html', title: '', type: 'video' },
-            { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page4', title: '', type: 'video' },
-            { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page5', title: '', type: 'video' },
-            { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page6', title: '', type: 'video' },
-            { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page7', title: '', type: 'video' },
-            { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page8', title: '', type: 'video' },
-            { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page9', title: '', type: 'video' },
-            { url: '../videos/video-vargas-1-2.mp4', link: 'https://www.example.com/page10', title: '', type: 'video' }
+            { url: '../videos/video-vargas-2.mp4', link: '../capitulo-1/index.html', title: '', type: 'video' },
+            { url: '../videos/video-vargas-2.mp4', link: '../capitulo-2/index.html', title: '', type: 'video' },
+            { url: '../videos/video-vargas-2.mp4', link: '../capitulo-3/index.html', title: '', type: 'video' },
+            { url: '../videos/video-vargas-2.mp4', link: 'https://www.example.com/page4', title: '', type: 'video' },
+            { url: '../videos/video-vargas-2.mp4', link: 'https://www.example.com/page5', title: '', type: 'video' },
+            { url: '../videos/video-vargas-2.mp4', link: 'https://www.example.com/page6', title: '', type: 'video' },
+            { url: '../videos/video-vargas-2.mp4', link: 'https://www.example.com/page7', title: '', type: 'video' },
+            { url: '../videos/video-vargas-2.mp4', link: 'https://www.example.com/page8', title: '', type: 'video' },
+            { url: '../videos/video-vargas-2.mp4', link: 'https://www.example.com/page9', title: '', type: 'video' },
+            { url: '../videos/video-vargas-2.mp4', link: 'https://www.example.com/page10', title: '', type: 'video' }
         ];        
 
         // Cargar la textura de fondo
@@ -122,9 +122,9 @@
         function createGifTexture(url) {
             const video = document.createElement('video');
             video.src = url;
-            video.loop = true; // Asegúrate de que el GIF se repita
-            video.muted = true; // Si no se quiere sonido, silenciar
-            video.play(); // Inicia la reproducción del video
+            video.loop = true; 
+            video.muted = true; 
+            video.play(); 
 
             const texture = new THREE.VideoTexture(video);
             return texture;
@@ -159,18 +159,17 @@
                 });
             }*/
 
+            if (index === 0) {
+                geometry = new THREE.PlaneGeometry(2.0, 2.0, 2.0, 2.0);
+            } else {
+                geometry = new THREE.PlaneGeometry(1.3, 1.1, 1, 1);
+            }
 
-    if (index === 0) {
-        geometry = new THREE.PlaneGeometry(2.0, 2.0, 2.0, 2.0);
-    } else {
-        geometry = new THREE.PlaneGeometry(1.3, 0.9, 1, 1);
-    }
-
-    material = new THREE.MeshBasicMaterial({
-        map: texture,
-        transparent: true,
-        side: THREE.DoubleSide,
-    });
+            material = new THREE.MeshBasicMaterial({
+                map: texture,
+                transparent: true,
+                side: THREE.DoubleSide,
+            });
 
             const plane = new THREE.Mesh(geometry, material);
 
@@ -386,7 +385,6 @@
                     renderer.setSize(window.innerWidth, window.innerHeight);
                     composer.setSize(window.innerWidth, window.innerHeight);
                 });
-
 
     </script>
 
